service/ingress/cafe-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  annotations:
  # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
spec:
  # ingressClassName: nginx # use only with k8s version >= 1.18.0
  tls:
  - hosts:
    - doktor.a910.tak-cslab.org
    secretName: cafe-secret
  rules:
  - host: doktor.a910.tak-cslab.org
    http:
      paths:
      - path: /
        backend:
          serviceName: web
          servicePort: 80
      - path: /tea
        backend:
          serviceName: tea-svc
          servicePort: 80
      - path: /coffee
        backend:
          serviceName: coffee-svc
          servicePort: 80
